--- a/src/css/main.css
+++ b/src/css/main.css
@@ -129,6 +129,19 @@
 .sign-in-content-icon {
   font-size: 5rem;
 }
+.sign-in-content-errorBox {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: black;
+  background-color: #f03f39;
+  border: solid 1px black;
+  font-weight: bold;
+  box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+  border-radius: 10px;
+  margin-bottom: 10px;
+  height: 50px;
+}
 .sign-in-content-input-wrapper {
   display: flex;
   flex-direction: column;
