--- a/src/css/main.css
+++ b/src/css/main.css
@@ -4,6 +4,10 @@
   align-items: center;
   padding: 5px 20px;
 }
+.main-nav > div {
+  display: flex;
+  gap: 10px;
+}
 .main-nav a {
   font-weight: bold;
   color: #2c3e50;
