--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -4,6 +4,11 @@
     align-items: center;
     padding: 5px 20px;
 
+    & > div {
+        display: flex;
+        gap: 10px;
+    }
+
     & a {
         font-weight: bold;
         color: #2c3e50;
