--- a/src/sass/pages/_userPage.scss
+++ b/src/sass/pages/_userPage.scss
@@ -7,8 +7,66 @@
         background-color: #00bc77;
         color: #fff;
         font-weight: bold;
+        font-size: 1.2rem;
         padding: 10px;
-      }
+        min-width: 150px;
+    }
+
+    &-editForm {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
+
+        &-inputWrapper {
+            display: flex;
+            align-items: center;
+            text-align: left;
+            gap: 10px;
+
+            & label {
+                font-weight: bold;
+                font-size: 1.2rem;
+            }
+              
+            & input {
+                padding: 2px;
+                font-size: 1.2rem;
+            }
+        }
+
+        &-buttons{
+
+            margin-top: 10px;
+            display: flex;
+            gap: 20px;
+
+            &-button{
+                border-color: #00bc77;
+                background-color: #00bc77;
+                color: #fff;
+                font-weight: bold;
+                font-size: 1.2rem;
+                padding: 10px;
+                min-width: 150px;
+            }
+        }    
+    }
+
+    &-errorBox{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: black;
+        background-color: #f03f39;
+        border: solid 1px black;
+        font-weight: bold;
+        box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+        border-radius: 10px;
+        margin: 10px auto;
+        height: 50px;
+        max-width: 400px;
+    }
 }
 
 .account {
