--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -6,7 +6,14 @@
 
     & > div {
         display: flex;
-        gap: 10px;
+        flex-direction: column;
+        gap: 5px;
+
+        @media (min-width: 720px) {
+            flex-direction: row;
+            gap: 10px;
+        }
+
     }
 
     & a {
