--- a/src/sass/pages/_signInPage.scss
+++ b/src/sass/pages/_signInPage.scss
@@ -9,58 +9,10 @@
     &-icon {
         font-size: 5rem;
     }
-
-    &-errorBox{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        color: black;
-        background-color: #f03f39;
-        border: solid 1px black;
-        font-weight: bold;
-        box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
-        border-radius: 10px;
-        margin-bottom: 10px;
-        height: 50px;
-    }
-        
-    &-input-wrapper {
-        display: flex;
-        flex-direction: column;
-        text-align: left;
-        margin-bottom: 1rem;
-
-        & label {
-            font-weight: bold;
-        }
-          
-        & input {
-            padding: 5px;
-            font-size: 1.2rem;
-        }
-      }
     
-    &-input-remember {
-        display: flex;
+    @import "../components/singInForm.scss";
 
-        & label {
-            margin-left: 0.25rem;
-        }
-    }
-
-    &-button {
-        display: block;
-        width: 100%;
-        padding: 8px;
-        font-size: 1.1rem;
-        font-weight: bold;
-        margin-top: 1rem;
-        border-color: #00bc77;
-        background-color: #00bc77;
-        color: #fff;
-      }
-    
-  }
+}
 
 
 
