--- a/src/sass/pages/_userPage.scss
+++ b/src/sass/pages/_userPage.scss
@@ -12,131 +12,11 @@
         min-width: 150px;
     }
 
-    &-editForm {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: 10px;
-
-        &-inputWrapper {
-            display: flex;
-            align-items: center;
-            text-align: left;
-            gap: 10px;
-
-            & label {
-                font-weight: bold;
-                font-size: 1.2rem;
-            }
-              
-            & input {
-                padding: 2px;
-                font-size: 1.2rem;
-            }
-        }
-
-        &-buttons{
-
-            margin-top: 10px;
-            display: flex;
-            gap: 20px;
-
-            &-button{
-                border-color: #00bc77;
-                background-color: #00bc77;
-                color: #fff;
-                font-weight: bold;
-                font-size: 1.2rem;
-                padding: 10px;
-                min-width: 150px;
-            }
-        }    
-    }
-
-    &-errorBox{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        color: black;
-        background-color: #f03f39;
-        border: solid 1px black;
-        font-weight: bold;
-        box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
-        border-radius: 10px;
-        margin: 10px auto;
-        height: 50px;
-        max-width: 400px;
-    }
+    @import "../components/userNameForm.scss";
+    
 }
 
-.account {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border: 1px solid black;
-    background-color: #fff;
-    width: 80%;
-    margin: 0 auto;
-    flex-direction: column;
-    padding: 1.5rem;
-    box-sizing: border-box;
-    text-align: left;
-    margin-bottom: 2rem;
-
-    @media (min-width: 720px) {
-        flex-direction: row;
-    }
-
-    &-content-wrapper {
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-
-        &-title {
-            margin: 0;
-            padding: 0;
-            font-size: 1rem;
-            font-weight: normal;
-        }
-
-        &-amount {
-            margin: 0;
-            font-size: 2.5rem;
-            font-weight: bold;
-        }
-
-        &-amount-description {
-            margin: 0;
-        }
-
-        &-cta {
-
-            width: 100%;
-
-            @media (min-width: 720px) {
-                display: flex;
-                justify-content: end;
-            }
-        } 
-
-        &-transaction-button {
-            display: block;
-            width: 100%;
-            padding: 8px;
-            font-size: 1.1rem;
-            font-weight: bold;
-            margin-top: 1rem;
-            border-color: #00bc77;
-            background-color: #00bc77;
-            color: #fff;
-
-            @media (min-width: 720px) {
-                width: 200px;
-            }
-        }
-          
-    }
-  }
+@import "../components/account"
   
   
   
